OpenRewrite upgraded to SpringBoot4 (+ couple of changes)
- possibly problem with Jackson as it seems that HATEOAS is stuck with Jackson2 while SpringBoot4 requires Jackson3